# Jeka-OS

./: Makefile  README.md
16bit_mbr/: .gitignore  Makefile  kernel.asm  loader.asm
blog_os_bootimage_64bit_rust/: Cargo.toml  Makefile  README.md
blog_os_bootimage_64bit_rust/.cargo/: config.toml
blog_os_bootimage_64bit_rust/src/: main.rs
blog_os_bootimage_last2_64bit_rust/: Cargo.toml  Makefile
blog_os_bootimage_last2_64bit_rust/kernel/: Cargo.toml  basic-kernel.md
blog_os_bootimage_last2_64bit_rust/kernel/src/: main.rs
blog_os_bootimage_last_64bit_rust/: Cargo.toml  Makefile  basic-os.md  build.rs
blog_os_bootimage_last_64bit_rust/kernel/: Cargo.toml
does_not_work_32bit_mbr/32bit_mbr/: Makefile  _bochsrc.txt  bochsrc.txt  kernel.c  kernel_entry.asm  linker.ld  loader.asm
does_not_work_32bit_mbr/min32bit_mbr/: .gitignore  Makefile  bochsrc.txt  kernel.c  kernel_entry.asm  linker.ld  loader.asm
osdev_multiboot1_32bit_c/: bochsrc.txt  boot.s  grub.cfg
osdev_multiboot1_c/: Makefile  _linker.ld  kernel.c  linker.ld
osdev_multiboot2_32bit_c/: Makefile  boot.s  grub.cfg  linker.ld
osdev_multiboot2_32bit_cpp/: Makefile  boot.s
osdev_multiboot2_32bit_rust/: .gitignore  Makefile  boot.s  i686-unknown-none.json
osdev_multiboot2_32bit_rust/.cargo/: config.toml
osdev_multiboot2_32bit_rust/src/: lib.rs
osdev_multiboot2_64bit_rust/: Cargo.toml  Makefile  README.md  boot.s  grub.cfg  linker.ld  x86_64-unknown-none.json
osdev_multiboot2_64bit_rust/src/: lib.rs
osdev_multiboot2_c/: .gitignore  kernel.c
osdev_multiboot2_cpp/: README.md  grub.cfg  kernel.cpp  linker.ld
osdev_multiboot2_rust/: Cargo.toml  README.md  grub.cfg  i686-unknown-none.json  linker.ld
osdev_multiboot2_rust/.cargo/: config.toml
osdev_multiboot2_rust/src/: lib.rs
(+6 files in other folders)
