[package]
name = "blog_os_bootimage_64bit_rust"
version = "0.1.0"
edition = "2024"
authors = ["Author Name <author@example.com>"]


[dependencies]
bootloader = "0.9"
 
# используется при `cargo build`
[profile.dev]
panic = "abort" # отключить размотку стека при панике

# используется при `cargo build --release`
[profile.release]
panic = "abort" # отключить размотку стека при панике