# Cargo.toml

[package]
name = "myos"
version = "0.1.0"
authors = ["Ваше Имя <ваша_почта@example.com>"]
edition = "2021"

# --- Спецификация для ядра (Freestanding) ---

[lib]
# Мы собираем не исполняемый файл (бинарник), а библиотеку (.rlib),
# которая затем будет слинкована с нашим ассемблерным кодом и линкером LD.
# Это позволяет Rust не включать свою стандартную функцию main и прочие runtime-зависимости.
crate-type = ["staticlib"]


# --- Зависимости (пока нет) ---
# [dependencies] 
# volatile = "0.3.0" # Пример полезной зависимости